--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,2 @@
-h1 {color: blue; font-size:300%;}
-a{ font-size:200%;}
+h1 {color: blue; font-size: 500%; text-align: center;}
+a{ font-size: 400%; text-align: center;}
