--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,3 @@
 h1 {color: blue; font-size: 500%; text-align: center;}
 a{ font-size: 400%; text-align: center;}
+body.love {background-color: lightcoral;}
