--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 h1 {color: blue; font-size: 500%; text-align: center;}
-a{ font-size: 400%; text-align: center;}
+h2 { font-size: 400%; text-align: center;}
 body.love {background-color: lightcoral;}
+body.trust {background-color: lightsalmon;}
+body.time {background-color: lightsteelblue;}
+body.lives {background-color: lightgoldenrodyellow;}
+body.talks {background-color: lightseagreen;}
+body.looks {background-color: lightskyblue;}
