Still refining font sizes and table border

--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,5 @@ body.looks {background-color: lightskyblue;}
 h1 {color: blue; font-size: 500%; text-align: center;}
 h2 {font-size: 300%; text-align: center;}
 
-p.scripture {font-size: 200%; font-style: italic;}
-table {font-size: 200%;}
+p.scripture {font-size: 400%; font-style: italic;}
+table {font-size: 300%;border-style: solid;}
