--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,4 @@ h1 {color: blue; font-size: 500%; text-align: center;}
 h2 {font-size: 300%; text-align: center;}
 
 p.scripture {font-size: 400%; font-style: italic;}
-table {font-size: 300%;border-style: solid;}
+table, tr, td {font-size: 300%;border: 1px solid black; border-collapse: collapse;}
