--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,5 @@ h1 {color: blue; font-size: 500%; text-align: center;}
 h2 {font-size: 300%; text-align: center;}
 
 p.scripture {font-size: 300%; font-style: italic;}
-table, tr, td {font-size: 250%; border: 1px solid black; border-collapse: collapse;}
+table, tr, td {border: 1px solid black; border-collapse: collapse;}
+td {font-size: 250%;}
