--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body.looks {background-color: lightskyblue;}
 h1 {color: blue; font-size: 500%; text-align: center;}
 h2 {font-size: 300%; text-align: center;}
 
-p.intro {font-size: 250%; text-indent: 50px;}
-p.scripture {font-size: 300%; font-style: italic;}
+.intro {font-size: 250%; text-indent: 50px;}
+.scripture {font-size: 300%; font-style: italic;}
 table, tr, td {border: 1px solid black; border-collapse: collapse;}
 td {font-size: 250%;}
