Ttrying to determine Root folder

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+body.home {background-color: lightgray;}
 body.love {background-color: lightcoral;}
 body.trust {background-color: lightsalmon;}
 body.time {background-color: lightsteelblue;}
