--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body.looks {background-color: lightskyblue;}
 h1 {color: blue; font-size: 500%; text-align: center;}
 h2 {font-size: 300%; text-align: center;}
 
-img.nav-icon {width: 42px; height: 42px;}
+img.nav-icon {width: 50px; height: 50px; padding-right: 10px;}
 p, div.intro {font-size: 250%; text-indent: 50px;}
 p.scripture {font-size: 300%; font-style: italic;}
 table, tr, td {border: 1px solid black; border-collapse: collapse;}
