--- a/docs/styles.css
+++ b/docs/styles.css
@@ -11,6 +11,6 @@ h2 {font-size: 300%; text-align: center;}
 
 img.nav-icon {width: 50px; height: 50px; padding-right: 10px;}
 p, div.intro {font-size: 250%; text-indent: 50px;}
-p.scripture {font-size: 300%; font-style: italic;}
+p.scripture {font-size: 300%; font-style: italic;  text-align: center; padding-left: 10%; padding-right: 10%;}
 table, tr, td {border: 1px solid black; border-collapse: collapse;}
 td {font-size: 250%;}
