--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,3 +13,4 @@ img.nav-icon {width: 50px; height: 50px; padding-right: 10px;}
 p.scripture {font-size: 150%; font-style: italic;  text-align: center; padding-left: 10%; padding-right: 10%;}
 p.intro, div.intro {font-size: 125%; text-indent: 50px;}
 table, tr, td {border: 1px solid black; border-collapse: collapse;}
+td {vertical-align: top;}
