--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,10 +7,11 @@ body.talks {background-color: lightseagreen;}
 body.looks {background-color: lightskyblue;}
 
 h1 {font-size: 175%; color: blue; text-align: center;}
-h2 {font-size: 150%; text-align: center;}
+h2 {font-size: 150%; text-align: center; veritical-align: middle;}
 
-img.nav-icon {width: 50px; height: 50px; padding-right: 10px;}
-p.scripture {font-size: 150%; font-style: italic;  text-align: center; padding-left: 10%; padding-right: 10%;}
+div.nav-icon {display: flex; align-items: center; justify-content: center;}
+img.nav-icon {width: 50px; height: 50px; padding-right: 10px; veritical-align: middle;}
+p.scripture {font-size: 125%; font-style: italic;  text-align: center; padding-left: 10%; padding-right: 10%;}
 p.intro, div.intro {font-size: 125%; text-indent: 50px;}
 table, tr, td {border: 1px solid black; border-collapse: collapse;}
 td {vertical-align: top;}
